--- a/src/pages/project-wizard/steps/project-wizard-welcome/ProjectWizardWelcome.module.css
+++ b/src/pages/project-wizard/steps/project-wizard-welcome/ProjectWizardWelcome.module.css
@@ -6,5 +6,5 @@
 
 .header {
     margin-bottom: 4vh;
-    font-size: 2rem;
+    font-size: 2rem !important; /* MUI does not work well with adding CSS via external file */
 }
